--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/kait-schorr/Letters-Pen-Pal-Tracker#readme",
   "dependencies": {
-    "cors": "^2.8.4",
     "bcrypt": "^1.0.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.3.0",
