--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.7",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.5"
   }
 }
