UPDATE GIT IGNORE

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-
+node_modules
+/pen-pal/node_modules
 # testing
 /coverage
 
